--- a/src/templates/actor/parts/combat/parts/supernatural-shields.hbs
+++ b/src/templates/actor/parts/combat/parts/supernatural-shields.hbs
@@ -1,10 +1,14 @@
 {{#> "systems/animabf/templates/common/ui/group.hbs"
   class="supernatural-shields"
 }}
-  {{>
+  {{!-- {{>
   "systems/animabf/templates/common/ui/group-header.hbs"
     title=(localize "anima.ui.combat.supernaturalShields.title")
     addRowButtonData="add-supernatural-shield"
+  }} --}}
+  {{>
+  "systems/animabf/templates/common/ui/group-header.hbs"
+    title=(localize "anima.ui.combat.supernaturalShields.title")
   }}
   {{#> "systems/animabf/templates/common/ui/group-body.hbs"
     class="supernatural-shields"
