--- a/src/templates/actor/parts/mystic/parts/spells/spells.hbs
+++ b/src/templates/actor/parts/mystic/parts/spells/spells.hbs
@@ -66,6 +66,9 @@
               zeonInputName=(concat "system.dynamic.spells." spell._id ".system.grades.base.zeon.value")
               maintenanceCostInputName=(concat "system.dynamic.spells." spell._id ".system.grades.base.maintenanceCost.value")
               descriptionInputName=(concat "system.dynamic.spells." spell._id ".system.grades.base.description.value")
+              damageInputName=(concat "system.dynamic.spells." spell._id ".system.grades.base.damage.value")
+              shieldPointsInputName=(concat "system.dynamic.spells." spell._id ".system.grades.base.shieldPoints.value")
+              spellCombatType=spell.system.combatType.value
               gradeName='base'
               grade=spell.system.grades.base
             }}
@@ -78,6 +81,9 @@
               zeonInputName=(concat "system.dynamic.spells." spell._id ".system.grades.intermediate.zeon.value")
               maintenanceCostInputName=(concat "system.dynamic.spells." spell._id ".system.grades.intermediate.maintenanceCost.value")
               descriptionInputName=(concat "system.dynamic.spells." spell._id ".system.grades.intermediate.description.value")
+              damageInputName=(concat "system.dynamic.spells." spell._id ".system.grades.intermediate.damage.value")
+              shieldPointsInputName=(concat "system.dynamic.spells." spell._id ".system.grades.intermediate.shieldPoints.value")
+              spellCombatType=spell.system.combatType.value
               gradeName='intermediate'
               grade=spell.system.grades.intermediate
             }}
@@ -90,6 +96,9 @@
               zeonInputName=(concat "system.dynamic.spells." spell._id ".system.grades.advanced.zeon.value")
               maintenanceCostInputName=(concat "system.dynamic.spells." spell._id ".system.grades.advanced.maintenanceCost.value")
               descriptionInputName=(concat "system.dynamic.spells." spell._id ".system.grades.advanced.description.value")
+              damageInputName=(concat "system.dynamic.spells." spell._id ".system.grades.advanced.damage.value")
+              shieldPointsInputName=(concat "system.dynamic.spells." spell._id ".system.grades.advanced.shieldPoints.value")
+              spellCombatType=spell.system.combatType.value
               gradeName='advanced'
               grade=spell.system.grades.advanced
             }}
@@ -102,6 +111,9 @@
               zeonInputName=(concat "system.dynamic.spells." spell._id ".system.grades.arcane.zeon.value")
               maintenanceCostInputName=(concat "system.dynamic.spells." spell._id ".system.grades.arcane.maintenanceCost.value")
               descriptionInputName=(concat "system.dynamic.spells." spell._id ".system.grades.arcane.description.value")
+              damageInputName=(concat "system.dynamic.spells." spell._id ".system.grades.arcane.damage.value")
+              shieldPointsInputName=(concat "system.dynamic.spells." spell._id ".system.grades.arcane.shieldPoints.value")
+              spellCombatType=spell.system.combatType.value
               gradeName='arcane'
               grade=spell.system.grades.arcane
             }}
