FIX - descriptions & more things

--- a/src/templates/actor/parts/combat/parts/armors.hbs
+++ b/src/templates/actor/parts/combat/parts/armors.hbs
@@ -37,6 +37,7 @@
               title=(localize "anima.ui.combat.armors.quality.title")
               inputName=(concat "system.dynamic.armors." armor._id ".system.quality.value")
               inputValue=armor.system.quality.value
+              dtype="Number"
             }}
             {{>
             "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
