--- a/src/templates/common/domain/select-quality.hbs
+++ b/src/templates/common/domain/select-quality.hbs
@@ -5,6 +5,7 @@
   hideTitle=this.hideTitle
   inputName=this.inputName
   inputValue=this.inputValue
+  dtype=this.dtype
 }}
   <option {{#if (is "eq" this.inputValue -10)}}selected{{/if}} value="-10">-10</option>
   <option {{#if (is "eq" this.inputValue -5)}}selected{{/if}} value="-5">-5</option>
