--- a/src/templates/actor/parts/combat/parts/weapons.hbs
+++ b/src/templates/actor/parts/combat/parts/weapons.hbs
@@ -47,6 +47,7 @@
               title=(localize "anima.ui.combat.weapons.quality.title")
               inputName=(concat "system.dynamic.weapons." weapon._id ".system.quality.value")
               inputValue=weapon.system.quality.value
+              dtype="Number"
             }}
             {{>
             "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
